--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -50,6 +50,7 @@
         <EditText
             android:id="@+id/txt_password"
             android:layout_width="match_parent"
+            android:password="true"
             android:layout_height="wrap_content"
             android:layout_below="@id/txt_password_label" />
 
@@ -65,6 +66,7 @@
         <EditText
             android:id="@+id/txt_confirm_password"
             android:layout_width="match_parent"
+            android:password="true"
             android:layout_height="wrap_content"
             android:layout_below="@id/txt_confirm_password_label" />
 
