--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
                     android:orientation="vertical">
                     <fragment
                         android:id="@+id/mapView"
-                        android:name="com.google.android.gms.maps.MapFragment"
+                        android:name="com.google.android.gms.maps.SupportMapFragment"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"/>
 
