--- a/app/src/main/res/layout/activity_add_purpose.xml
+++ b/app/src/main/res/layout/activity_add_purpose.xml
@@ -25,6 +25,7 @@
         <EditText
             android:id="@+id/txt_place"
             android:layout_width="match_parent"
+            android:textColor="@color/colorPrimary"
             android:layout_height="wrap_content"
             android:layout_below="@id/txt_place_label" />
 
@@ -41,6 +42,8 @@
             android:id="@+id/txt_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="number"
+            android:textColor="@color/colorPrimary"
             android:layout_below="@id/txt_phone_number_label" />
 
         <TextView
