--- a/app/src/main/res/layout/activity_add_purpose.xml
+++ b/app/src/main/res/layout/activity_add_purpose.xml
@@ -7,12 +7,15 @@
     android:weightSum="1">
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_margin="@dimen/activivty_horizontal_margin_large">
 
         <TextView
