--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -78,6 +78,7 @@
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:background="@color/colorPrimaryDark"
             android:text="@string/sign_up"
-            android:textColor="@color/colorTextPrimary" />
+            android:textColor="@color/colorTextPrimary"
+            android:onClick="SingUpClicked"/>
     </RelativeLayout>
 </LinearLayout>
