--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,6 +72,11 @@
                         </LinearLayout>
                     </ScrollView>
                 </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/log_out"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"/>
             </FrameLayout>
         </LinearLayout>
     </TabHost>
