--- a/app/src/main/res/layout/activity_purpose.xml
+++ b/app/src/main/res/layout/activity_purpose.xml
@@ -13,7 +13,9 @@
         <TextView
             android:id="@+id/txt_purposer_name"
             android:textColor="@color/colorTextPrimary"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
+            android:textAlignment="center"
+            android:textSize="18sp"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/txt_purposer_phone_number"
@@ -24,11 +26,13 @@
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/txt_purposer_adress"
+            android:textColor="@color/colorTextSecondary"
             android:layout_below="@id/txt_purposer_phone_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/txt_purposer_description"
+            android:textColor="@color/colorTextSecondary"
             android:layout_below="@id/txt_purposer_adress"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
