Added layout for your each purposes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,11 +55,13 @@
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
 
-                            <ListView
+                            <LinearLayout
+                                android:id="@+id/list_my_proposes"
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content">
+                                android:layout_height="wrap_content"
+                                android:orientation="vertical">
 
-                            </ListView>
+                            </LinearLayout>
 
                             <Button
                                 android:id="@+id/btn_add_purpose"
