--- a/app/src/main/res/layout/activity_add_purpose.xml
+++ b/app/src/main/res/layout/activity_add_purpose.xml
@@ -28,7 +28,7 @@
         <EditText
             android:id="@+id/txt_place"
             android:layout_width="match_parent"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorTextPrimary"
             android:layout_height="wrap_content"
             android:layout_below="@id/txt_place_label" />
 
@@ -46,7 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="number"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@color/colorTextPrimary"
             android:layout_below="@id/txt_phone_number_label" />
 
         <TextView
