--- a/app/src/main/res/layout/activity_purpose.xml
+++ b/app/src/main/res/layout/activity_purpose.xml
@@ -15,25 +15,48 @@
             android:textColor="@color/colorTextPrimary"
             android:layout_width="match_parent"
             android:textAlignment="center"
-            android:textSize="18sp"
+            android:textSize="32sp"
             android:layout_height="wrap_content" />
         <TextView
             android:id="@+id/txt_purposer_phone_number"
             android:layout_width="match_parent"
+            android:textSize="24sp"
             android:layout_below="@+id/txt_purposer_name"
             android:layout_marginTop="@dimen/activity_vertical_margin"
             android:textColor="@color/colorTextSecondary"
             android:layout_height="wrap_content" />
+        <View
+            android:id="@+id/purpose_first_separator"
+            android:layout_below="@id/txt_purposer_phone_number"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_width="match_parent"
+            android:background="@color/colorTextSecondary"
+            android:layout_height="3dp">
+
+        </View>
         <TextView
             android:id="@+id/txt_purposer_adress"
             android:textColor="@color/colorTextSecondary"
-            android:layout_below="@id/txt_purposer_phone_number"
+            android:textSize="24sp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_below="@id/purpose_first_separator"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
+        <View
+            android:id="@+id/purpose_second_separator"
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_below="@id/txt_purposer_adress"
+            android:background="@color/colorTextSecondary"
+            android:layout_height="3dp">
+
+        </View>
         <TextView
             android:id="@+id/txt_purposer_description"
             android:textColor="@color/colorTextSecondary"
-            android:layout_below="@id/txt_purposer_adress"
+            android:textSize="24sp"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:layout_below="@id/purpose_second_separator"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </RelativeLayout>
