--- a/app/src/main/res/layout/activity_purpose.xml
+++ b/app/src/main/res/layout/activity_purpose.xml
@@ -66,7 +66,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimaryDark"
             android:text="Navigation..."
-            android:textColor="@color/colorPrimary" />
+            android:textColor="@color/colorTextPrimary" />
     </RelativeLayout>
 </LinearLayout>
